# IPL-Transfer-Credibility-Engine

./: .env  docker-compose.yml  pyproject.toml  seed_all_10_franchises.py  seed_expanded_data.py  seed_test_data.py
app/: main.py  requirements.txt
app/api/: __init__.py
app/core/: config.py  contradiction_detector.py  credibility_engine.py  database.py
app/scrapers/: __init__.py
frontend/src/app/: page.tsx
tests/: test_contradiction_detector.py  test_credibility_engine.py
