[project]
name = "ipl-credibility-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "google-generativeai>=0.8.6",
    "neo4j>=5.28.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
